--- a/index.html
+++ b/index.html
@@ -8,10 +8,16 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app" class="main-container">
+    <!-- <div id="app" class="main-container">
       <div class="block"></div>
       <div class="orbit"></div>
+    </div> -->
+    <div class="dialog-wrapper">
+      <div class="dialog-content">
+        <button class="close-btn">Close</button>
+      </div>
     </div>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
