--- a/index.html
+++ b/index.html
@@ -8,14 +8,10 @@
     <title>Vite App</title>
   </head>
   <body>
-    <!-- <div id="app" class="main-container">
-      <div class="block"></div>
-      <div class="orbit"></div>
-    </div> -->
-    <div class="dialog-wrapper">
-      <div class="dialog-content">
-        <button class="close-btn">Close</button>
-      </div>
+    <div class="main-container">
+      <div class="square"></div>
+      <!-- <div class="square"></div>
+      <div class="square"></div> -->
     </div>
 
     <script type="module" src="/main.js"></script>
